--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -193,4 +193,49 @@ a {
     color: #fff;
 }
 
+/*Quarta Sessão - Contato*/
 
+.a-container { 
+    display: flex;
+    align-items: flex-start; 
+    background-color: #063950;
+    padding: 0 15px 0 15px;
+    border-bottom: 1px solid #7c800d;
+    width: 100%;
+    height: 100vh;
+}
+
+.text-a-container {
+    display: flex;
+    align-items: flex-start; 
+    justify-content: center;
+    text-align: center;
+    margin: 50px;
+    color: #fff;
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.form-container{
+    background-color: #7c800d;
+    padding: 25px;
+    border-radius: 10px;
+}
+
+.form input {
+    width: 550px;
+    height: 30px;
+    border-radius: 2px;
+    text-align: center;
+    font-size: 15px;
+    align-items: center;
+}
+
+hr {
+    margin: 0 50px 0 50px;
+    height: 250px;
+  }
